Agent query: Проверьте, пожалуйста: 1) видна ли кнопка 'Узнать больше' только при наведении? 2) переведена ли кнопка 'Get Started' на русский как 'Начать обучение'? 3) переведены ли заголовки 'Featured Courses' и 'Success Stories'?
Fix: Translate "Get Started" button and add translations for "Success Stories" section; improve "Learn More" button visibility.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/d5895b7a-3005-48b2-b1c4-0eb39e23447d/a17a2c8a-5b4e-479d-a1e6-57ae34369b42.jpg

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -4,7 +4,8 @@
     "courses": "Courses",
     "materials": "Study Materials",
     "universityGuide": "University Guide",
-    "contact": "Contact"
+    "contact": "Contact",
+    "getStarted": "Get Started"
   },
   "hero": {
     "title": "Your Path to Academic Excellence",
@@ -20,6 +21,10 @@
     "price": "Price",
     "comingSoon": "Coming Soon",
     "paymentInProgress": "Payment system is under development."
+  },
+  "successStories": {
+    "title": "Success Stories",
+    "description": "See what our students have achieved"
   },
   "contact": {
     "title": "Contact Us",
