Agent query: Проверьте, пожалуйста, переведены ли все элементы интерфейса на русский язык, включая заголовок 'Featured Courses' и информацию о курсах?
Translate UI elements and course types to English and Russian.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/d5895b7a-3005-48b2-b1c4-0eb39e23447d/baf53ee6-9d82-4c2a-8967-88e663753e2b.jpg

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -20,7 +20,13 @@
     "duration": "Duration",
     "price": "Price",
     "comingSoon": "Coming Soon",
-    "paymentInProgress": "Payment system is under development."
+    "paymentInProgress": "Payment system is under development.",
+    "types": {
+      "all": "All",
+      "ielts": "IELTS",
+      "sat": "SAT",
+      "general": "General English"
+    }
   },
   "successStories": {
     "title": "Success Stories",
